UI layout issues fixed

--- a/public/src/chat/grey-theme.scss
+++ b/public/src/chat/grey-theme.scss
@@ -482,10 +482,6 @@
     color: #666;
   }
 
-  #search_input {
-    box-shadow: 0 1px 2px #CCCCCC inset;
-  }
-
   .visitor-details label, .agent-status {
     color: #adadad;
   }
