--- a/public/src/chat/structure.scss
+++ b/public/src/chat/structure.scss
@@ -1405,8 +1405,9 @@ li.ui-state-active {
     padding: 15px 25px;
     width: 265px;
     box-shadow: 0px 20px 100px 0px rgba(0, 0, 0, 0.6);
+    border-radius: 4px;
     position: fixed;
-    top: 15%;
+    top: 20%;
     z-index: 10000000;
     margin: auto;
     left: 0; 
@@ -2672,9 +2673,9 @@ div.color{
     left: 7px;
     top: 5px;
     &.notify_jump{
-       -webkit-animation: NotifyJump 1s linear 2;
-          -moz-animation: NotifyJump 1s linear 2;
-               animation: NotifyJump 1s linear 2;
+       -webkit-animation: NotifyJump 1s linear 1 alternate;
+          -moz-animation: NotifyJump 1s linear 1 alternate;
+               animation: NotifyJump 1s linear 1 alternate;
     }
 
     .fc_notify_flip_front, .fc_notify_flip_back{
@@ -2816,7 +2817,7 @@ div.color{
 @-webkit-keyframes NotifyJump{
     0% {top: 0;}
     50%{top: -20px;}
-    100% {top:0; }
+    100% {top:0;}
 }
 @-moz-keyframes NotifyJump{
     0% {top: 0;}
